<resources>
    <string name="app_name">松小堡</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="ignore">忽略</string>
    <string name="proceed">继续</string>
    <string name="being_not">暂不</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="dont_save">不保存</string>
    <string name="save_ok">保存成功</string>
    <string name="my_new">新建</string>
    <string name="add">添加</string>
    <string name="all">全部</string>
    <string name="select_all">全选</string>
    <string name="total">合计：</string>
    <string name="item_price">价格：</string>
    <string name="item_number">数量：</string>
    <string name="item_select_no">请选择：</string>
    <string name="item_select_ok">已选择：</string>
    <string name="color">颜色</string>
    <string name="size">尺码</string>
    <string name="clean">清除</string>
    <string name="done">完成</string>
    <string name="desc">""</string>
    <string name="dot">・</string>
    <string name="sign_semicolon">：</string>
    <string name="time_divided">:</string>
    <string name="multiplication">×</string>
    <string name="number_0">0</string>
    <string name="price_00">0.00</string>
    <string name="num_total">共%1$d件</string>
    <string name="prompt">操作提示</string>
    <string name="delete">删除</string>
    <string name="delete_pain">忍痛删了</string>
    <string name="delete_think">我再想想</string>
    <string name="delete_confirm">&#160;确定要删除么？</string>
    <string name="leave_confirm">去意已决</string>
    <string name="abandon_confirm">确定放弃？</string>
    <string name="send_confirm">确认发送</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="send">发送</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="not_empty">不能为空</string>
    <string name="setting">设置</string>
    <string name="other">其它</string>
    <string name="error">错误</string>
    <string name="post">发布</string>
    <string name="title">标题</string>
    <string name="undo">复原</string>
    <string name="redo">重做</string>
    <string name="edit">编辑</string>
    <string name="unfold">展开</string>
    <string name="put_away">收起</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="toast_exit_prompt">再按一次退出程序</string>
    <string name="toast_server_busy">服务器繁忙！请稍后再试！</string>
    <string name="toast_error_data_null">数据出现错误！请重新加载页面！</string>
    <string name="dialog_version_new">当前版本已是最新版本</string>
    <string name="dialog_version_update">检测到新版本\n确定开始更新</string>
    <string name="dialog_version_update_force">当前版本低于最低版本！\n需升级后才能正常使用！</string>
    <string name="dialog_error_msg">发生错误，请稍后再尝试</string>
    <string name="dialog_error_video_url">视频出现错误，无法播放</string>
    <string name="network">网络</string>
    <string name="network_closed">未能连接到Stylistpark</string>
    <string name="network_fault">请检查您的网络连接</string>
    <string name="network_no_wifi">检测到您当前未使用Wifi，建议您在Wifi网络下观看视频</string>
    <string name="loading">请稍候&#8230;</string>
    <string name="loading_pull_refresh">下拉刷新</string>
    <string name="loading_release_refresh">松开刷新</string>
    <string name="loading_loading">加载中&#8230;</string>
    <string name="loading_update_time">上次更新时间 </string>
    <string name="loading_load_more">加载更多</string>
    <string name="loading_strive_loading">奋力加载中&#8230;</string>
    <string name="loading_downloading">奋力下载中&#8230;&#8230;</string>
    <string name="loading_no_more">没有更多了</string>
    <string name="loading_no_data">暂无%1$s</string>
    <string name="loading_click_load">重新加载</string>
    <string name="loading_submit_fail">上载失败</string>
    <string name="main_tab_text_1">首页</string>
    <string name="main_tab_text_2">松小堡</string>
    <string name="main_tab_text_3">我的</string>
    <string name="mine_text_user_id">松小堡ID:%1$s</string>
    <string name="sign_up_title">我要报名</string>
    <string name="sign_up_input_name">请输入姓名</string>
    <string name="sign_up_input_age">请选择年龄范围</string>
    <string name="sign_up_input_phone">请输入手机号码</string>
    <string name="sign_up_input_phone_error">请输入正确的11位数手机号码</string>
    <string name="sign_up_cost_show">活动费用：%1$s元</string>
    <string name="sign_up_cost_hint">活动说明：\n\n1、费用为大赛统一报名费，主要用于场地租赁和组织等;</string>
    <string name="title_sort">分类</string>
    <string name="title_screen">筛选</string>
    <string name="title_qr_code_scan">二维码扫描</string>
    <string name="title_fragment_four">我的购物车</string>
    <string name="title_product_detail">商品详情</string>
    <string name="title_login">用户登入</string>
    <string name="title_register">邮箱注册</string>
    <string name="title_delivery_info">收货信息</string>
    <string name="title_order_confirm">确认订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="find_top_tab_1">全部</string>
    <string name="find_top_tab_2">视频</string>
    <string name="find_top_tab_3">专题</string>
    <string name="find_no_data">暂无发现，\n可能是栏目出错啦！</string>
    <string name="find_comment">评论</string>
    <string name="find_comment_participate">参与评论</string>
    <string name="find_comment_total">共%1$d条评论</string>
    <string name="find_comment_ok">评论已发布</string>
    <string name="find_comment_input">请输入评论内容</string>
    <string name="photo_select_title">选择相册</string>
    <string name="photo_select_one_title">选择一张照片</string>
    <string name="photo_select_no_data">没有检测到相片</string>
    <string name="photo_editor_title">相片编辑</string>
    <string name="photo_clip_head_title">头像裁剪</string>
    <string name="photo_clip_card_title">证件裁剪</string>
    <string name="photo_change_head">修改头像</string>
    <string name="photo_shoot_upload">拍照上传</string>
    <string name="photo_choose_upload">本地上传</string>
    <string name="photo_upload_img">正在上传%1$s，请稍后&#8230;</string>
    <string name="photo_upload_img_ok">上传%1$s成功</string>
    <string name="photo_img_url_error">%1$s出现错误！请重新编辑！</string>
    <string name="photo_upload_head_fail">上传头像失败！请点击头像重新上传！</string>
    <string name="photo_clip_error">裁剪相片时出现错误！请重新选择相片！</string>
    <string name="photo_ID_photo">身份证明相片</string>
    <string name="photo_ID_photo_null">身份证明相片不能为空</string>
    <string name="photo_upload_ID_fail">上传身份证明相片失败！请重新提交审核！</string>
    <string name="photo_show_save_one">保存1张</string>
    <string name="photo_show_save_more">保存%1$d张</string>
    <string name="photo_show_save_image">保存到手机</string>
    <string name="photo_show_save_ok">保存成功</string>
    <string name="photo_show_save_fail">保存图片出错！请检查SD卡是否正确安装或重试！</string>
    <string name="photo_save_sd_error">没有储存卡</string>
    <string name="photo_save_directory_error">没有找到储存目录</string>
    <string name="photo_scan_text_hint">将二维码放入框内, 即可自动扫描</string>
    <string name="photo_crop_image_instru">移动并缩放相片以符合空间大小</string>
    <string name="photo_camera_authority">您已禁用摄像头权限，请到设置或手机管家的权限管理中重新配置权限。</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_version">检查更新</string>
    <string name="setting_push">消息推送</string>
    <string name="setting_logout">登出帐户</string>
    <string name="setting_close">关闭应用</string>
    <string name="setting_logout_confirm">&#160;确定要退出登入么？</string>
    <string name="setting_close_confirm">&#160;确定要关闭应用么？</string>
    <string name="setting_input_hint_feedback">写下您的意见或建议</string>
    <string name="setting_input_error_feedback">意见或建议不能为空~</string>
    <string name="login_login">登入账户</string>
    <string name="login_register">注册</string>
    <string name="login_user_name">邮箱/卡号</string>
    <string name="login_input_user_name">请输入邮箱/卡号</string>
    <string name="login_password">密码</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_input_password_again">请确认密码</string>
    <string name="login_password_error">两次输入的密码不一致！请重新输入！</string>
    <string name="login_input_invitation_code">输入邀请码</string>
    <string name="login_input_email">请输入邮箱</string>
    <string name="login_email_format_error">请检查邮箱格式是否正确？</string>
    <string name="login_input_verify_code">输入验证码</string>
    <string name="login_error_verify_code">验证码错误！请重新输入！</string>
    <string name="login_new_register">新用户注册</string>
    <string name="login_reset_password">重置密码</string>
    <string name="login_quick">第三方账号快速登入</string>
    <string name="login_oauth_cancel">登入取消</string>
    <string name="login_error_oauth">授权登入出现错误！请重试！</string>
    <string name="login_bound">绑定账号</string>
    <string name="login_immediately_bound">立即绑定</string>
    <string name="login_no_account">没有账号？马上去注册</string>
    <string name="login_bound_reminder">温馨提示：如您已有SP账号，请先绑定账号。跳过将默认为您新建一个SP账号并自动绑定，请谨慎操作。</string>
    <string name="login_timeout">登入超时！请重新登入！</string>
    <string name="share">分享</string>
    <string name="share_qq">QQ</string>
    <string name="share_qq_space">QQ空间</string>
    <string name="share_friends">朋友圈</string>
    <string name="share_wechat">微信</string>
    <string name="share_weibo">微博</string>
    <string name="share_email">邮件</string>
    <string name="share_message">短信</string>
    <string name="share_alipay">支付宝</string>
    <string name="share_copy">复制链接</string>
    <string name="share_msg_no_wechat">请先下载微信</string>
    <string name="share_msg_no_facebook">请先下载 Facebook</string>
    <string name="share_msg_no_whatsapp">请先下载 Whatsapp</string>
    <string name="share_msg_no_line">请先下载 Line</string>
    <string name="share_msg_error_license">授权失败，请重试！</string>
    <string name="share_msg_error_oauth">获取授权信息异常，请关闭页面后重新授权。</string>
    <string name="share_msg_success">分享成功</string>
    <string name="share_msg_error">分享出错</string>
    <string name="share_msg_cancel">分享取消</string>
    <string name="share_msg_copy_link_ok">链接已复制</string>
    <string name="share_msg_entity_error">分享参数出错，请重新加载页面。</string>
    <string name="address_store_pickup">上门自取</string>
    <string name="address_store_pickup_phone">请输入本人联系电话</string>
    <string name="address_free_postage">免邮费</string>
    <string name="address_default">设为默认地址</string>
    <string name="address_consignee">收货人</string>
    <string name="address_phone_number">手机</string>
    <string name="address_email_address">邮箱</string>
    <string name="address_china">中国</string>
    <string name="address_area">地区信息</string>
    <string name="address_province">省</string>
    <string name="address_city">市</string>
    <string name="address_district">区</string>
    <string name="address_choose_country">选择区域</string>
    <string name="address_choose_province">选择省</string>
    <string name="address_choose_city">选择市</string>
    <string name="address_choose_district">选择区、县</string>
    <string name="address_detailed_address">街道门牌号等信息</string>
    <string name="address_input_full_address">请输入完整的详细地址</string>
    <string name="address_error_name_empty">请输入收货人姓名</string>
    <string name="address_error_phone_empty">请输入手机号码</string>
    <string name="address_error_area_empty">请选择地区信息</string>
    <string name="address_error_address_empty">请输入详细的地址信息</string>
    <string name="address_error_load_area">加载区域信息出现错误！请关闭页面后重试！</string>
    <string name="address_error_no_select">请填写收货地址</string>
    <string name="address_error_data_null">还没有收货地址，去新增收货地址吧。</string>
    <string name="mine_page">我的资料</string>
    <string name="mine_head">头像</string>
    <string name="mine_name">姓名</string>
    <string name="mine_nick">昵称</string>
    <string name="mine_gender">性别</string>
    <string name="mine_gender_male">男</string>
    <string name="mine_gender_female">女</string>
    <string name="mine_gender_confidential">保密</string>
    <string name="mine_birthday">生日</string>
    <string name="mine_area">地区</string>
    <string name="mine_intro">签名</string>
    <string name="mine_intro_hint">填写个性签名更容易获得别人的关注哦</string>
</resources>